[B]1.2.0[/B]
- Added Hebrew translation (Eng2Heb@github)
- Added new try-except block into vod resolver due to new website api
- Cosmetics

[B]1.1.5[/B]
- Added spoofed UA for live streams

[B]1.1.4[/B]
- Code cosmetics

[B]1.1.3[/B]
- Minor regex fix on live resolver
- Code cosmetics

[B]1.1.2[/B]
- Minor fix on live resolver
- Code cosmetics

[B]1.1.1[/B]
- Rebased to use tulip libraries

[B]1.1.0[/B]
- Re-work of main menu
- Added sections for ALPHA CYPRUS
- Fixed all issues related with web site changes
- Added add-on screenshots

[B]1.0.2[/B]
- Fixed issue with tv shows
- Fixed issue with archive
- Tweaked live stream

[B]1.0.1[/B]
- Filter previews of episodes
- Code cosmetics

[B]1.0.0[/B]
- Initial version