@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="1.2.0" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="1.2.1" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
 		<import addon="script.module.tulip" version="1.2.9" />
@@ -20,6 +20,9 @@
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
 		<news>
+[B]1.2.1[/B]
+- Fixed resolver to always choose HLS stream and fallback to rtmp
+
 [B]1.2.0[/B]
 - Added Hebrew translation (Eng2Heb@github)
 - Added new try-except block into vod resolver due to new website api
